fix overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -48,7 +48,6 @@ header {
   }
 
   video {
-    width: 480px;
     margin-bottom: 5rem;
     pointer-events: none;
   }
